small fix for help card alignment

--- a/client/assets/styles/scss/components/help.scss
+++ b/client/assets/styles/scss/components/help.scss
@@ -166,7 +166,7 @@
     color: $blue;
     float: right;
     font-weight: 500;
-    margin: 1px 3px 0 0;
+    margin: 1px 3px 1px 0;
 
     &:hover {
       border-color: rgba($blue,.7);
